--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -41,10 +41,31 @@ html {
     border: 0px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1100px) {
     .navbar.floating-nav {
         max-width: 95%;
         margin: 0.5rem auto;
+        display: none;
+    }
+}
+
+@media (max-width: 2200px) {
+    #hero-nav-bar-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #hero-nav-bar {
+        width: 15%;
+    }
+    
+    .navbar.floating-nav .navbar-collapse {
+        text-align: center;
+    }
+    
+    .navbar.floating-nav .navbar-nav {
+        flex-direction: column;
+        gap: 0.5rem;
     }
 }
 
@@ -98,7 +119,7 @@ html {
 }
 
 /* Responsive adjustments */
-@media (max-width: 768px) {
+@media (max-width: 900px) {
     .hero-section {
         padding: 0;
         min-height: 100vh;
