--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -67,6 +67,14 @@ html {
         margin: 0.5rem auto;
         display: none;
     }
+
+    .hero-buttons {
+        margin: 0 20%;
+    }
+
+    .hero-text {
+        margin: 0 10%;
+    }
 }
 
 @media (max-width: 2200px) {
@@ -81,6 +89,15 @@ html {
     
     .navbar.floating-nav .navbar-collapse {
         text-align: center;
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transition: max-height 0.5s ease, opacity 0.5s ease;
+    }
+    
+    .navbar.floating-nav:hover .navbar-collapse {
+        max-height: 300px;
+        opacity: 1;
     }
     
     .navbar.floating-nav .navbar-nav {
